# alarm-q

./: CLAUDE.md  DESIGN.md  README.md  audio_fix_summary.md  pyproject.toml  sound_issue_analysis.md  tests_fix_complete_report.md
problems/quiz/: general.json  math.json  science.json  statistics.json
src/: alarm_manager.py  main.py  question_loader.py  quiz_manager.py
src/models/: alarm.py  handlers.py  problem.py
src/ui/: alarm_view.py  main_view.py  problem_view.py  quiz_view.py  settings_view.py
src/utils/: audio.py  storage.py  system_audio.py
tests/: __init__.py  test_alarm_integration.py  test_alarm_integration_simple.py  test_audio.py
